--- a/src/views/About/tabContent/tabContent.module.css
+++ b/src/views/About/tabContent/tabContent.module.css
@@ -1,5 +1,5 @@
 .p {
-	padding: 0rem 1rem;
+	padding: 0;
 	text-align: left;
 	width: 100%;
 	font:
@@ -11,6 +11,7 @@
 .img {
 	width: 100%;
 	height: auto;
+	padding: 0.75rem 0;
 }
 .twoColumns {
 	display: flex;
